--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
           <button class="btn" type="submit">Get User</button>
         </form>
       </div>
+
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search By Topic</h3>
+        <div class="card-body" id="language-buttons">
+          <button class="btn" data-language="JavaScript">JavaScript</button>
+          <button class="btn" data-language="HTML">HTML</button>
+          <button class="btn" data-language="CSS">CSS</button>
+        </div>
+      </div>
     </div>
 
 
